# clawathon-2026-3anhem

./: .deploy.json  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.claude/: launch.json
app/: config.py  crypto.py  database.py  main.py  models.py
app/api/: admin.py  chat.py  deps.py  repos.py  users.py  webhooks.py  worldcup.py
app/services/: agent_service.py  git_service.py  github_service.py
app/static/: app.js  index.html  styles.css  thumbnail.html
backend/: .gitignore  pyproject.toml
backend/app/: main.py  registry.py
backend/app/api/: blocks.py  chat.py  runs.py  uploads.py  workflows.py
backend/app/blocks/export_xlsx/: block.yaml  main.py
backend/app/blocks/load_csv/: block.yaml  main.py
backend/app/db/: models.py  session.py
backend/app/orchestrator/: claude.py  loop.py  tools.py
backend/app/runner/: executor.py
backend/samples/: sales.csv
backend/tests/: test_orchestrator.py  test_runner.py
docs/: PLAN.md  TESTING.md
frontend/: next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/apps/: page.tsx
frontend/components/: BlockDiagram.tsx  BlockInspector.tsx  ChatPanel.tsx  Header.tsx  SaveMiniApp.tsx
frontend/lib/: api.ts  useBlockCatalog.ts
scripts/: deploy-no-restore.sh  deploy.sh
