[project]
name = "block-chat-backend"
version = "0.1.0"
description = "Block-composing chat app — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "anthropic>=0.40",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=17",
    "httpx>=0.27",
    "pyyaml>=6",
    "python-multipart>=0.0.9",
    "sse-starlette>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
